# python-git-reproduction

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: docs.yml
docs/: PROJECT_TREE.md  README.md  README_CN.md  SDD_REQUIREMENTS.md  TASKS.md
docs-site/: mkdocs.yml  mkdocs_prd.md  requirements.txt
docs-site/docs/: getting-started.md  index.md
docs-site/docs/build-git-teaching/: architecture.md  merge-engine.md  refs.md
docs-site/docs/en/: getting-started.md  index.md
docs-site/docs/git-teaching/: commits-and-dag.md  git-object-model.md  packfile.md
docs-site/docs/prd/: 00-overview.md  04-plumbing-commands.md  09-roadmap.md  index.md
docs-site/docs/project/: index.md  project-tree.md  sdd-requirements.md  tasks.md
docs-site/docs/sdd-teaching/: index.md  prd-to-tasks.md
docs-site/docs/user-guide/: commands.md  index.md  local-workflow.md  pygit-server.md
docs/prd/: 00-overview.md  02-object-database.md  03-index.md  07-packfile-remote.md  08-non-functional.md  09-roadmap.md
pygit/: __init__.py  checkout.py  cli.py  commit.py  errors.py  ignore.py  index.py  lockfile.py  merge.py  objects.py  pack.py  paths.py  refs.py  remote.py  repository.py  reset.py  revision.py  server.py  stash.py  status.py  tag.py  working_tree.py
tests/: test_branch.py  test_checkout.py  test_cli.py  test_index.py  test_merge.py  test_objects.py  test_pack.py  test_refs_commit.py  test_remote.py  test_repository.py  test_reset.py  test_server.py  test_stash.py  test_status_rm.py  test_tag.py  test_working_tree.py
(+68 files in other folders)
